<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mile.drivetrain.MainActivity">

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/select_gender"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/rent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/select_rent"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/rent_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/relationship"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/select_relationship"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/relationship_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/select_age"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/age_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/children"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/select_children"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/children_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/select_education"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/education_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button
        android:id="@+id/query_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/queryButton_2" />




</LinearLayout>
