<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    tools:context="com.example.mile.drivetrain.HomeActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >
        <Button
            android:id="@+id/query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchMainActivity"
            android:text="@string/queryButton" />
        <Button
            android:id="@+id/query_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queryHistoryButton"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutButton"
            android:onClick="launchAboutActivity"/>


    </LinearLayout>
</LinearLayout>
